--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -50,6 +50,11 @@
                 "glob": "**/*",
                 "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
                 "output": "/assets/"
+              },
+              {
+                "glob": "**/*",
+                "input": "public/",
+                "output": "/assets/"
               }
             ],
             "styles": [
