--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@ngxs/devtools-plugin": "^18.1.1-dev.master-d6b076c",
+    "@ngxs/storage-plugin": "^18.1.4",
     "@ngxs/store": "^18.1.1",
     "ng-zorro-antd": "^18.1.1",
     "rxjs": "~7.8.0",
