add of send mail functionality

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost,1433; Database=StoreManager; User Id=sa; Password=Rems#2001; TrustServerCertificate=True"
   },
+  "EmailConfiguration": {
+    "From": "raoul.teida@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "raoul.teida@gmail.com",
+    "Password": "ebce uvzw ukid nikd"
+  },
   "AllowedHosts": "*"
 }
