add comment component and others components

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433; Database=StoreManager; User Id=sa; Password=Rems#2001; TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1433;Initial Catalog=StoreManager;Persist Security Info=False;User ID=sa;Password=Rems#2001;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "EmailConfiguration": {
     "From": "raoul.teida@gmail.com",
