--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -80,7 +80,7 @@
               "outputHashing": "all"
             },
             "development": {
-              "optimization": true,
+              "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
             }
