deploy backend on microsoft azure

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:store-manager-server.database.windows.net,1433;Initial Catalog=storemanagerdb;Persist Security Info=False;User ID=teida;Password=Rems#2001;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;" //"Server=localhost,1433;Initial Catalog=StoreManager;Persist Security Info=False;User ID=sa;Password=Rems#2001;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+    "DefaultConnection":"Server=tcp:databasestoremanagementserver.database.windows.net,1433;Initial Catalog=storeManagementdb;Persist Security Info=False;User ID=teida;Password=Rems#2001;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   },
   "EmailConfiguration": {
     "From": "raoul.teida@gmail.com",
