--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -32,6 +32,7 @@
     <PackageReference Include="System.Formats.Asn1" Version="8.0.1" />
     <PackageReference Include="itext7" Version="8.0.5" />
     <PackageReference Include="System.Text.Json" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.11" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="qodana.yaml" />
